--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-joblib
-tabulate
-jax
+absl-py==0.14.1
+chex==0.0.8
+dm-tree==0.1.6
+equinox==0.1.1
+flatbuffers==2.0
+jax==0.2.21
+jaxlib==0.1.71
+joblib==1.0.1
+numpy==1.21.2
+opt-einsum==3.3.0
+optax==0.0.9
+scipy==1.7.1
+tabulate==0.8.9
+toolz==0.11.1
+tqdm==4.62.3
+typing-extensions==3.10.0.2
